Update NETLIFY_SITE_ID in deploy.yml
Replaced NETLIFY_SITE_ID secret with a hardcoded value.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
           production-deploy: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_SITE_ID: ${{ 2eed7b5c-c79b-4711-a1d6-1e309d5b3959 }}
